# Frugal_Rationality

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
frugal_rationality/: LQG_control.py  __init__.py  nonlinear_simulation.py  numerical_solver.py  visualizer.py
notebooks/: cart_pole_demo.ipynb  planar_drone_demo.ipynb
solutions/: cart_pole.npy  drone.npy
